-- 1.0.5 2008 - Stability
: Bug: fix BLOB/TEXT default, for compatibility with versions of mysql
: Bug: fix home page error that only shows up if there are no projects in DB
: Feature: support <pre></pre> in bug comments
: TODO: document <pre></pre>
: Change: submit & next
: Change: show most recently CHANGED bugs on home page

-- 1.0.4 2007 October - Stability
: Bug 1872351: fix preventing non-admins from attaching attachments
: Bug: fix parameter checking on bugid
: Bug: fix to SQL for newaccount.php (external facing new account form)
: Change: new bugs are left "Unconfirmed" based on preferences, even if there is a default contact for the module.
: Change: new bugs drop you at the bug, not some stale old querry
: Change: tighter regex for automatic bug linking.  Use "bug #xxxxx".

-- 1.0.3 2007 October - Usability Changes
: Add rel="nofollow" to make phpBugTracker less attractive to comment spammers.
: Vastly speed up direct-to-bug links (eliminate redundant query of prior query results)
: Feature - URL is preserved  through login
: Modify translations, no longer "five" most recent bugs
: Clean up email template: line up columns, fix horked priority attribute
: Fix ambiguous column, in searches, caused by bookmarks & attachments table
: Fix small SQL injection hole.
: Copy magic_quotes_gpc warning to admin side.

-- 1.0.2 2007 September - A catchup release, several years of odd checkins gathered
: Noted workaround for static method call, for php5/jpgraph 2.2.  easier jpgraph setup also.
: Applied various patches from sourceforge
: Validated CCS and HTML syntax 
: Temporarily disabled "mass_update" footer on query, until fixed.
: Changed bug layout to put the description of the bug first, before metadata

-- 1.x devel -- 
: Moved priority levels into a table
: Changed the 'Assignable' bit to a group permission
: Added sort-order to components and versions
: Added support to bookmark/monitor a set of bugs
: Added a simple UI to edit group permissions