@@ -415,14 +415,12 @@ $QUERY = array(
 			'left join '.TBL_AUTH_USER.' owner on b.assigned_to = owner.user_id '.
 			'left join '.TBL_AUTH_USER.' reporter on b.created_by = reporter.user_id '.
 			'left join '.TBL_AUTH_USER.' lastmodifier on b.last_modified_by = lastmodifier.user_id '.
-			'left join '.TBL_COMMENT.' comment on b.bug_id = comment.bug_id '.
-			'left join '.TBL_ATTACHMENT.' attachment on b.bug_id = attachment.bug_id '.
-			'left join '.TBL_BUG_VOTE.' vote on b.bug_id = vote.bug_id '.
 			'left join '.TBL_BOOKMARK.' bookmark on b.bug_id = bookmark.bug_id '.
 			'left join '.TBL_RESOLUTION.' resolution on b.resolution_id = resolution.resolution_id '.
 			'left join '.TBL_DATABASE.' on b.database_id = '.TBL_DATABASE.'.database_id '.
 			'left join '.TBL_VERSION.' version2 on b.to_be_closed_in_version_id = version2.version_id '.
-			'left join '.TBL_VERSION.' version3 on b.closed_in_version_id = version3.version_id, '.
+			'left join '.TBL_VERSION.' version3 on b.closed_in_version_id = version3.version_id '.
+			'%s, '.
 			TBL_SEVERITY.' severity, '.
 			TBL_STATUS.' status, '.
 			TBL_OS.' os, '.
