@@ -409,19 +409,17 @@ $QUERY = array(
 	'query-list-bugs' =>
 		'select '.
 			'%s '.
-		'from '.
+		"\nfrom ".
 			TBL_BUG.' b '.
 			'left join '.TBL_AUTH_USER.' owner on b.assigned_to = owner.user_id '.
 			'left join '.TBL_AUTH_USER.' reporter on b.created_by = reporter.user_id '.
 			'left join '.TBL_AUTH_USER.' lastmodifier on b.last_modified_by = lastmodifier.user_id '.
-			'left join '.TBL_COMMENT.' comment on b.bug_id = comment.bug_id '.
-			'left join '.TBL_ATTACHMENT.' attachment on b.bug_id = attachment.bug_id '.
-			'left join '.TBL_BUG_VOTE.' vote on b.bug_id = vote.bug_id '.
 			'left join '.TBL_BOOKMARK.' bookmark on b.bug_id = bookmark.bug_id '.
 			'left join '.TBL_RESOLUTION.' resolution on b.resolution_id = resolution.resolution_id '.
 			'left join '.TBL_DATABASE.' on b.database_id = '.TBL_DATABASE.'.database_id '.
 			'left join '.TBL_VERSION.' version2 on b.to_be_closed_in_version_id = version2.version_id '.
-			'left join '.TBL_VERSION.' version3 on b.closed_in_version_id = version3.version_id, '.
+			'left join '.TBL_VERSION.' version3 on b.closed_in_version_id = version3.version_id '.
+			'%s, '.
 			TBL_SEVERITY.' severity, '.
 			TBL_STATUS.' status, '.
 			TBL_OS.' os, '.
@@ -430,7 +428,7 @@ $QUERY = array(
 			TBL_COMPONENT.' component, '.
 			TBL_PROJECT.' project, '.
 			TBL_PRIORITY.' priority '.
-		'where '.
+		"\nwhere ".
 			'b.severity_id = severity.severity_id '.
 			'and b.priority = priority.priority_id '.
 			'and b.status_id = status.status_id '.
@@ -439,7 +437,7 @@ $QUERY = array(
 			'and b.version_id = version.version_id '.
 			'and b.component_id = component.component_id '.
 			'and b.project_id = project.project_id %s '.
-		'group by '.
+		"\ngroup by ".
 			'b.bug_id '.
 		'order by '.
 			'%s %s, '.
