@@ -63,7 +63,8 @@
 						<?php echo translate("Description"); ?>:
 					</td>
 					<td>
-						<textarea name="description" cols="50" rows="8" wrap="virtual"><?php echo htmlspecialchars(stripslashes($description)) ?></textarea>
+						<textarea name="description" cols="55" rows="8" wrap="virtual"><?php echo htmlspecialchars(stripslashes($description)) ?></textarea>
+						<?php echo translate("PRETAGS"); ?>
 					</td>
 				</tr>
 				<tr>
@@ -71,7 +72,7 @@
 						URL:
 					</td>
 					<td>
-						<input type="text" size="30" maxlength="255" name="url" value="<?php echo $url ?>">
+						<input type="text" size="55" maxlength="255" name="url" value="<?php echo $url ?>">
 					</td>
 				</tr>
 				<tr>
