@@ -1,10 +1,15 @@
 -- 1.0.5 2008 - Stability
-: Bug: fix BLOB/TEXT default, for compatibility with versions of mysql
+: Bug: fix BLOB/TEXT default, for compatibility with windows mysql
 : Bug: fix home page error that only shows up if there are no projects in DB
 : Feature: support <pre></pre> in bug comments
-: TODO: document <pre></pre>
 : Change: submit & next
 : Change: show most recently CHANGED bugs on home page
+: Performance: don't do expensive query joins unless the column will be shown (e.g. attachment count)
+: TODO: don't show password on install
+: TODO: rename pgsql.php, which is also the name of the PEAR:DB postgres driver
+: TODO: create INDEX phpbt_attachment_bug_id ON phpbt_attachment (bug_id);
+: TODO: create INDEX phpbt_attachment_bug_id ON phpbt_bookmark   (bug_id);
+: TODO: create INDEX phpbt_attachment_bug_id ON phpbt_comment    (bug_id);
 
 -- 1.0.4 2007 October - Stability
 : Bug 1872351: fix preventing non-admins from attaching attachments
